<resources>
    <string name="app_name">Toggle/Switch App</string>
    <string name="Ton">Toggle On</string>
    <string name="Toff">Toggle Off</string>
    <string name="Son">Switch On</string>
    <string name="Soff">Switch Off</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="egg">Egg</string>
    <string name="cavemen">Cavemen</string>
    <string name="astronauts">Astronauts</string>
    <string-array name="spinner_values">
        <item>Spinner item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string name="starbuzz_logo">Android</string>
    <string name="click_me">Click me</string>

</resources>


